--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — Portfolio</title>
+  <title>Ryan Vu — Portfolio</title>
   <meta name="description" content="Portfolio of Your Name: projects, resume, and contact info." />
-  <meta name="author" content="Your Name" />
+  <meta name="author" content="Ryan Vu" />
   <!-- Open Graph for nice link previews -->
-  <meta property="og:title" content="Your Name — Portfolio" />
+  <meta property="og:title" content="Ryan Vu — Portfolio" />
   <meta property="og:description" content="Projects, resume, and contact info." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourusername.github.io/" />
+  <meta property="og:url" content="https://RyanVu612.github.io/" />
   <meta property="og:image" content="assets/me.jpg" />
   <style>
     /* ====== Design tokens (edit these!) ====== */
