--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         <!-- Replace assets/me.jpg with your photo (keep a square image for best results) -->
         <img src="assets/me.jpg" alt="Portrait of Your Name" class="avatar" />
         <div>
-          <h1 id="about-heading">Your Name</h1>
-          <p class="tagline">Short tagline: e.g., "Java developer & CS student"</p>
+          <h1 id="about-heading">Ryan Vu</h1>
+          <p class="tagline">CS Student at Cal Poly Pomona</p>
           <div class="badges" role="list">
-            <a class="badge" href="https://github.com/yourusername" target="_blank" rel="noopener">GitHub</a>
-            <a class="badge" href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="badge" href="https://github.com/RyanVu612" target="_blank" rel="noopener">GitHub</a>
+            <a class="badge" href="https://www.linkedin.com/in/ryan-qq-vu" target="_blank" rel="noopener">LinkedIn</a>
             <!-- Replace resume.pdf with your actual filename -->
             <a class="badge" href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
           </div>
           <p>
             <!-- Keep this 3–5 sentences. Say who you are, what you’re learning, and what you like building. -->
-            I'm a software developer who enjoys building clean, accessible web apps. I'm currently learning data structures and practicing Java and algorithms for internship interviews. Outside of code, I like hiking and coffee.
+            I'm a Computer Science student at Cal Poly Pomona, passionate about software development and problem-solving. I enjoy building projects that challenge my skills in algorithms and data structures, and I'm always eager to learn new processes and technology. Outside of coding, I enjoy playing tennis and indoor bouldering regularly with friends. 
           </p>
         </div>
       </div>
@@ -127,7 +127,7 @@
       <div class="cards">
         <!-- Duplicate a card block per project -->
         <article class="card">
-          <h3><a href="https://github.com/yourusername/project-one" target="_blank" rel="noopener">Project One</a></h3>
+          <h3><a href="https://github.com/RyanVu612/project-one" target="_blank" rel="noopener">Project One</a></h3>
           <p>One line summary of what it does and why it’s interesting. Optionally link to a live demo.</p>
           <div>
             <span class="chip">Java</span>
@@ -136,7 +136,7 @@
           </div>
         </article>
         <article class="card">
-          <h3><a href="https://github.com/yourusername/mips-blackjack" target="_blank" rel="noopener">MIPS Blackjack</a></h3>
+          <h3><a href="https://github.com/RyanVu612/mips-blackjack" target="_blank" rel="noopener">MIPS Blackjack</a></h3>
           <p>Blackjack game written in MIPS assembly; demonstrates state machines, I/O, and testing.</p>
           <div>
             <span class="chip">MIPS</span>
@@ -158,7 +158,7 @@
     <section id="contact" aria-labelledby="contact-heading">
       <h2 id="contact-heading">Contact</h2>
       <p>
-        The easiest way to reach me is email: <a href="mailto:you@example.com">you@example.com</a>.
+        The easiest way to reach me is email: <a href="mailto:ryanvu@cpp.edu">ryanvu@cpp.edu</a>.
         You can also DM me on LinkedIn.
       </p>
     </section>
