--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <p class="tagline">CS Student at Cal Poly Pomona</p>
           <div class="badges" role="list">
             <a class="badge" href="https://github.com/RyanVu612" target="_blank" rel="noopener">GitHub</a>
-            <a class="badge" href="https://www.linkedin.com/in/ryan-qq-vu" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="badge" href="https://www.linkedin.com/in/ryan-q-vu" target="_blank" rel="noopener">LinkedIn</a>
             <!-- Replace resume.pdf with your actual filename -->
             <a class="badge" href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
           </div>
@@ -137,10 +137,12 @@
         </article>
         <article class="card">
           <h3><a href="https://github.com/RyanVu612/mips-blackjack" target="_blank" rel="noopener">MIPS Blackjack</a></h3>
-          <p>Blackjack game written in MIPS assembly; demonstrates state machines, I/O, and testing.</p>
+          <p>Blackjack game written in MIPS assembly. Playable completely through the System Input/Output</p>
           <div>
-            <span class="chip">MIPS</span>
-            <span class="chip">Assembly</span>
+            <span class="chip">MIPS Assembly</span>
+            <span class="chip">State Machines</span>
+            <span class="chip">I/O</span>
+            <span class="chip">Debugging</span>
           </div>
         </article>
       </div>
@@ -156,17 +158,16 @@
 
     <!-- ====== Contact ====== -->
     <section id="contact" aria-labelledby="contact-heading">
-      <h2 id="contact-heading">Contact</h2>
+      <h2 id="contact-heading">Connect With Me!</h2>
       <p>
-        The easiest way to reach me is email: <a href="mailto:ryanvu@cpp.edu">ryanvu@cpp.edu</a>.
-        You can also DM me on LinkedIn.
+        <h3><a href="linkedin.com/in/ryan-q-vu/" target="_blank" rel="noopener">linkedin.com/in/ryan-q-vu/</a></h3>
       </p>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <small>© <span id="y"></span> Your Name. Built with HTML + CSS and hosted on GitHub Pages.</small>
+      <small>© <span id="y"></span> Ryan Vu. Built with HTML + CSS and hosted on GitHub Pages.</small>
     </div>
   </footer>
 
