--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section id="about" aria-labelledby="about-heading">
       <div class="hero">
         <!-- Replace assets/me.jpg with your photo (keep a square image for best results) -->
-        <img src="assets/me.jpg" alt="Portrait of Your Name" class="avatar" />
+        <img src="assets/image - Ryan Vu.jpeg" alt="Portrait of Your Name" class="avatar" />
         <div>
           <h1 id="about-heading">Ryan Vu</h1>
           <p class="tagline">CS Student at Cal Poly Pomona</p>
@@ -111,7 +111,7 @@
             <a class="badge" href="https://github.com/RyanVu612" target="_blank" rel="noopener">GitHub</a>
             <a class="badge" href="https://www.linkedin.com/in/ryan-q-vu" target="_blank" rel="noopener">LinkedIn</a>
             <!-- Replace resume.pdf with your actual filename -->
-            <a class="badge" href="resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
+            <a class="badge" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener">Resume (PDF)</a>
           </div>
           <p>
             <!-- Keep this 3–5 sentences. Say who you are, what you’re learning, and what you like building. -->
@@ -152,7 +152,7 @@
     <section id="resume" aria-labelledby="resume-heading">
       <h2 id="resume-heading">Resume</h2>
       <p>
-        You can <a class="resume-cta" href="resume.pdf" target="_blank" rel="noopener">open my resume</a> or download it. Keep a single up-to-date PDF in the repo.
+        You can <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener"></a>
       </p>
     </section>
 
