update blackjack project link and remove other project card

--- a/index.html
+++ b/index.html
@@ -125,18 +125,8 @@
     <section id="projects" aria-labelledby="projects-heading">
       <h2 id="projects-heading">Projects</h2>
       <div class="cards">
-        <!-- Duplicate a card block per project -->
         <article class="card">
-          <h3><a href="https://github.com/RyanVu612/project-one" target="_blank" rel="noopener">Project One</a></h3>
-          <p>One line summary of what it does and why it’s interesting. Optionally link to a live demo.</p>
-          <div>
-            <span class="chip">Java</span>
-            <span class="chip">Data Structures</span>
-            <span class="chip">Algorithms</span>
-          </div>
-        </article>
-        <article class="card">
-          <h3><a href="https://github.com/RyanVu612/mips-blackjack" target="_blank" rel="noopener">MIPS Blackjack</a></h3>
+          <h3><a href="https://github.com/RyanVu612/CS2640-Blackjack" target="_blank" rel="noopener">MIPS Blackjack</a></h3>
           <p>Blackjack game written in MIPS assembly. Playable completely through the System Input/Output</p>
           <div>
             <span class="chip">MIPS Assembly</span>
@@ -152,7 +142,7 @@
     <section id="resume" aria-labelledby="resume-heading">
       <h2 id="resume-heading">Resume</h2>
       <p>
-        You can <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener"></a>
+        <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener">Resume</a>
       </p>
     </section>
 
