fix linkedin link

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section id="resume" aria-labelledby="resume-heading">
       <h2 id="resume-heading">Resume</h2>
       <p>
-        <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+        <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener">My Resume</a>
       </p>
     </section>
 
@@ -150,7 +150,7 @@
     <section id="contact" aria-labelledby="contact-heading">
       <h2 id="contact-heading">Connect With Me!</h2>
       <p>
-        <h3><a href="linkedin.com/in/ryan-q-vu/" target="_blank" rel="noopener">linkedin.com/in/ryan-q-vu/</a></h3>
+        <h3><a href="linkedin.com/in/ryan-q-vu/" target="_blank" rel="noopener">My LinkedIn</a></h3>
       </p>
     </section>
   </main>
