upload course table template

--- a/index.html
+++ b/index.html
@@ -121,6 +121,40 @@
       </div>
     </section>
 
+    <!-- ====== Courses ====== -->
+  <section id="courses" aria-labelledby="courses-heading">
+    <h2 id="courses-heading">Relevant Coursework</h2>
+    <div class="table-wrap">
+      <table>
+        <caption class="sr-only">Relevant courses with term and short notes</caption>
+        <thead>
+          <tr>
+            <th scope="col">Course</th>
+            <th scope="col">Term</th>
+            <th scope="col">Notes</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Data Structures & Algorithms</td>
+            <td>Fall 2024</td>
+            <td>Lists, stacks, queues, trees, heaps, graphs, hashing</td>
+          </tr>
+          <tr>
+            <td>Computer Architecture</td>
+            <td>Spring 2024</td>
+            <td>MIPS assembly, pipelining, caches</td>
+          </tr>
+          <tr>
+            <td>Discrete Mathematics</td>
+            <td>Spring 2024</td>
+            <td>Proofs, combinatorics, graphs</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+
     <!-- ====== Projects ====== -->
     <section id="projects" aria-labelledby="projects-heading">
       <h2 id="projects-heading">Projects</h2>
