--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <nav aria-label="Primary">
         <ul>
           <li><a href="#about">About</a></li>
+          <li><a href="#courses">Courses</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -121,34 +122,54 @@
       </div>
     </section>
 
-    <!-- ====== Courses ====== -->
+   <!-- ====== Courses ====== -->
   <section id="courses" aria-labelledby="courses-heading">
-    <h2 id="courses-heading">Relevant Coursework</h2>
+  <h2 id="courses-heading">Relevant Coursework</h2>
     <div class="table-wrap">
       <table>
-        <caption class="sr-only">Relevant courses with term and short notes</caption>
+        <caption class="sr-only">Relevant courses with term and topics</caption>
         <thead>
           <tr>
             <th scope="col">Course</th>
             <th scope="col">Term</th>
-            <th scope="col">Notes</th>
+            <th scope="col">Topic 1</th>
+            <th scope="col">Topic 2</th>
+            <th scope="col">Topic 3</th>
+            <th scope="col">Topic 4</th>
+            <th scope="col">Topic 5</th>
+            <th scope="col">Topic 6</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Data Structures & Algorithms</td>
+            <td>Data Structures &amp; Algorithms</td>
             <td>Fall 2024</td>
-            <td>Lists, stacks, queues, trees, heaps, graphs, hashing</td>
+            <td>Lists</td>
+            <td>Stacks</td>
+            <td>Queues</td>
+            <td>Trees</td>
+            <td>Heaps</td>
+            <td>Graphs / Hashing</td>
           </tr>
           <tr>
             <td>Computer Architecture</td>
             <td>Spring 2024</td>
-            <td>MIPS assembly, pipelining, caches</td>
+            <td>MIPS Assembly</td>
+            <td>Pipelining</td>
+            <td>Caches</td>
+            <td>Memory</td>
+            <td>Performance</td>
+            <td>&nbsp;</td>
           </tr>
           <tr>
             <td>Discrete Mathematics</td>
             <td>Spring 2024</td>
-            <td>Proofs, combinatorics, graphs</td>
+            <td>Proofs</td>
+            <td>Combinatorics</td>
+            <td>Graphs</td>
+            <td>Logic</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
           </tr>
         </tbody>
       </table>
