add courses and change table format

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
    <!-- ====== Courses ====== -->
   <section id="courses" aria-labelledby="courses-heading">
-  <h2 id="courses-heading">Relevant Coursework</h2>
+    <h2 id="courses-heading">Relevant Coursework</h2>
     <div class="table-wrap">
       <table>
         <caption class="sr-only">Relevant courses with term and topics</caption>
@@ -139,44 +139,34 @@
           <tr>
             <th scope="col">Course</th>
             <th scope="col">Term</th>
-            <th scope="col">Topic 1</th>
-            <th scope="col">Topic 2</th>
-            <th scope="col">Topic 3</th>
-            <th scope="col">Topic 4</th>
-            <th scope="col">Topic 5</th>
-            <th scope="col">Topic 6</th>
+            <th scope="col">Topics</th>
           </tr>
         </thead>
         <tbody>
           <tr>
+            <th scope="col">Discrete Structures</th>
+            <th scope="col">Fall 2024</th>
+            <th scope="col">Logic, Proofs, Recurrences, Graphs, Trees</th>
+          </tr>
+          <tr>
+            <td scope="col">Introduction to Programming and Problem Solving</th>
+            <td scope="col">Fall 2024</th>
+            <td scope="col">Types, Variables &amp; I/O, Control Flow, Methods &amp; Decomposition, Arrays &amp; ArrayList, Classes &amp; Objects, Debugging</th>
+          </tr>
+          <tr>
             <td>Data Structures &amp; Algorithms</td>
-            <td>Fall 2024</td>
-            <td>Lists</td>
-            <td>Stacks</td>
-            <td>Queues</td>
-            <td>Trees</td>
-            <td>Heaps</td>
-            <td>Graphs / Hashing</td>
+            <td>Spring 2025</td>
+            <td>Lists, Stacks, Queues, Trees, Heaps, Graphs/Hashing</td>
           </tr>
           <tr>
-            <td>Computer Architecture</td>
-            <td>Spring 2024</td>
-            <td>MIPS Assembly</td>
-            <td>Pipelining</td>
-            <td>Caches</td>
-            <td>Memory</td>
-            <td>Performance</td>
-            <td>&nbsp;</td>
+            <td>Computer Organization and Assembly Programming</td>
+            <td>Spring 2025</td>
+            <td>MIPS Assembly, State Machines, I/O</td>
           </tr>
           <tr>
-            <td>Discrete Mathematics</td>
-            <td>Spring 2024</td>
-            <td>Proofs</td>
-            <td>Combinatorics</td>
-            <td>Graphs</td>
-            <td>Logic</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>Systems Programming</td>
+            <td>Spring 2025</td>
+            <td>C &amp; Pointers, Processes &amp; Syscalls, Threads &amp; Sync, Files &amp; POSIX I/O, IPC &amp; Memory</td>
           </tr>
         </tbody>
       </table>
