fix table headings

--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="col">Discrete Structures</th>
-            <th scope="col">Fall 2024</th>
-            <th scope="col">Logic, Proofs, Recurrences, Graphs, Trees</th>
+            <th>Discrete Structures</th>
+            <th>Fall 2024</th>
+            <th>Logic, Proofs, Recurrences, Graphs, Trees</th>
           </tr>
           <tr>
-            <td scope="col">Introduction to Programming and Problem Solving</th>
-            <td scope="col">Fall 2024</th>
-            <td scope="col">Types, Variables &amp; I/O, Control Flow, Methods &amp; Decomposition, Arrays &amp; ArrayList, Classes &amp; Objects, Debugging</th>
+            <td>Introduction to Programming and Problem Solving</th>
+            <td>Fall 2024</th>
+            <td>Types, Variables &amp; I/O, Control Flow, Methods &amp; Decomposition, Arrays &amp; ArrayList, Classes &amp; Objects, Debugging</th>
           </tr>
           <tr>
             <td>Data Structures &amp; Algorithms</td>
