update linkedin link

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <section id="contact" aria-labelledby="contact-heading">
       <h2 id="contact-heading">Connect With Me!</h2>
       <p>
-        <h3><a href="linkedin.com/in/ryan-q-vu/" target="_blank" rel="noopener">My LinkedIn</a></h3>
+        <h3><a href="https://www.linkedin.com/in/ryan-q-vu" target="_blank" rel="noopener">My LinkedIn</a></h3>
       </p>
     </section>
   </main>
