include email in contact

--- a/index.html
+++ b/index.html
@@ -201,6 +201,9 @@
     <!-- ====== Contact ====== -->
     <section id="contact" aria-labelledby="contact-heading">
       <h2 id="contact-heading">Connect With Me!</h2>
+      <p> 
+        <h3> Email: ryanvu@cpp.edu</h3>
+      </p>
       <p>
         <h3><a href="https://www.linkedin.com/in/ryan-q-vu" target="_blank" rel="noopener">My LinkedIn</a></h3>
       </p>
