update contact section

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <!-- ====== Contact ====== -->
     <section id="contact" aria-labelledby="contact-heading">
-      <h2 id="contact-heading">Connect With Me!</h2>
+      <h2 id="contact-heading">Contact Information</h2>
       <p> 
         <h3> Email: ryanvu@cpp.edu</h3>
       </p>
