change content of table

--- a/index.html
+++ b/index.html
@@ -137,36 +137,36 @@
         <caption class="sr-only">Relevant courses with term and topics</caption>
         <thead>
           <tr>
-            <th scope="col">Course</th>
-            <th scope="col">Term</th>
-            <th scope="col">Topics</th>
+            <th scope="col">Course Code (Cal Poly Pomona)</th>
+            <th scope="col">Course Name</th>
+            <th scope="col">Grade</th>
           </tr>
         </thead>
         <tbody>
           <tr>
+            <th>CS 1300</th>
             <th>Discrete Structures</th>
-            <th>Fall 2024</th>
-            <th>Logic, Proofs, Recurrences, Graphs, Trees</th>
+            <th>A</th>
           </tr>
           <tr>
+            <td>CS 1400</th>
             <td>Introduction to Programming and Problem Solving</th>
-            <td>Fall 2024</th>
-            <td>Types, Variables &amp; I/O, Control Flow, Methods &amp; Decomposition, Arrays &amp; ArrayList, Classes &amp; Objects, Debugging</th>
+            <td>A</th>
           </tr>
           <tr>
+            <td>CS 2400</td>
             <td>Data Structures &amp; Algorithms</td>
-            <td>Spring 2025</td>
-            <td>Lists, Stacks, Queues, Trees, Heaps, Graphs/Hashing</td>
+            <td>A</td>
           </tr>
           <tr>
-            <td>Computer Organization and Assembly Programming</td>
-            <td>Spring 2025</td>
-            <td>MIPS Assembly, State Machines, I/O</td>
-          </tr>
-          <tr>
+            <td>CS 2600</td>
             <td>Systems Programming</td>
-            <td>Spring 2025</td>
-            <td>C &amp; Pointers, Processes &amp; Syscalls, Threads &amp; Sync, Files &amp; POSIX I/O, IPC &amp; Memory</td>
+            <td>A</td>
+          </tr>
+          <tr>
+            <td>CS 2640</td>
+            <td>Computer Organization and Assembly Programming</td>
+            <td>A</td>
           </tr>
         </tbody>
       </table>
