--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 
    <!-- ====== Courses ====== -->
   <section id="courses" aria-labelledby="courses-heading">
-    <h2 id="courses-heading">Relevant Coursework</h2>
+    <h2 id="courses-heading">Coursework (Cal Poly Pomona)</h2>
     <div class="table-wrap">
       <table>
-        <caption class="sr-only">Relevant courses with term and topics</caption>
+        <caption class="sr-only">Relevant courses</caption>
         <thead>
           <tr>
-            <th scope="col">Course Code (Cal Poly Pomona)</th>
+            <th scope="col">Course Code</th>
             <th scope="col">Course Name</th>
             <th scope="col">Grade</th>
           </tr>
