change first course heading from th to td

--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
 
    <!-- ====== Courses ====== -->
   <section id="courses" aria-labelledby="courses-heading">
-    <h2 id="courses-heading">Coursework (Cal Poly Pomona)</h2>
+    <h2 id="courses-heading">Relevant Coursework</h2>
     <div class="table-wrap">
       <table>
-        <caption class="sr-only">Relevant courses</caption>
+        <caption class="sr-only">Relevant courses with term and topics</caption>
         <thead>
           <tr>
-            <th scope="col">Course Code</th>
+            <th scope="col">Course Code (Cal Poly Pomona)</th>
             <th scope="col">Course Name</th>
             <th scope="col">Grade</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th>CS 1300</th>
-            <th>Discrete Structures</th>
-            <th>A</th>
+            <td>CS 1300</td>
+            <td>Discrete Structures</td>
+            <td>A</td>
           </tr>
           <tr>
             <td>CS 1400</th>
@@ -159,15 +159,11 @@
             <td>A</td>
           </tr>
           <tr>
-            <td>CS 2600</td>
-            <td>Systems Programming</td>
-            <td>A</td>
-          </tr>
-          <tr>
             <td>CS 2640</td>
             <td>Computer Organization and Assembly Programming</td>
             <td>A</td>
           </tr>
+
         </tbody>
       </table>
     </div>
