readd back systems programming course

--- a/index.html
+++ b/index.html
@@ -159,11 +159,14 @@
             <td>A</td>
           </tr>
           <tr>
+            <td>CS 2600</td>
+            <td>Systems Programming</td>
+            <td>A</td>
+          <tr>
             <td>CS 2640</td>
             <td>Computer Organization and Assembly Programming</td>
             <td>A</td>
           </tr>
-
         </tbody>
       </table>
     </div>
