--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <!-- <header>
     <div class="container">
       <nav aria-label="Primary">
         <ul>
@@ -104,7 +104,7 @@
         </ul>
       </nav>
     </div>
-  </header>
+  </header> -->
 
   <main class="container">
     <!-- ====== About ====== -->
