include Section 508 certificate

--- a/index.html
+++ b/index.html
@@ -189,6 +189,18 @@
       </div>
     </section>
 
+    <!-- ====== Certifications ====== -->
+
+    <section id="certifications" aria-labelledby="certifications-heading">
+      <h2 id="certifications-heading">Certifications</h2>
+      <div class="cards">
+        <article class="card">
+          <h3><a href="assets/DHS_Trusted_Tester.pdf" target="_blank" rel="noopener">DHS Trusted Tester Certificate</a></h3>
+          <p>Completed the DHS Trusted Tester training program, demonstrating proficiency in security testing and vulnerability assessment methodologies.</p>
+        </article>
+      </div>
+    </section>
+
     <!-- ====== Contact ====== -->
     <section id="contact" aria-labelledby="contact-heading">
       <h2 id="contact-heading">Contact Information</h2>
