include image of resume under the pdf

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <section id="about" aria-labelledby="about-heading">
       <div class="hero">
         <!-- Replace assets/me.jpg with your photo (keep a square image for best results) -->
-        <img src="assets/image - Ryan Vu.jpeg" alt="Portrait of Your Name" class="avatar" />
+        <img src="assets/image - Ryan Vu.jpeg" class="avatar" />
         <div>
           <h1 id="about-heading">Ryan Vu</h1>
           <p class="tagline">CS Student at Cal Poly Pomona</p>
@@ -217,6 +217,7 @@
       <h2 id="resume-heading">Resume</h2>
       <p>
         <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener">My Resume</a>
+        <img src="assets/Ryan_Vu_Resume.jpg"/>
       </p>
     </section>
   </main>
