Add currently enrolled classes

--- a/index.html
+++ b/index.html
@@ -167,6 +167,26 @@
             <td>Computer Organization and Assembly Programming</td>
             <td>A</td>
           </tr>
+          <tr>
+            <td>CS 2610</td>
+            <td>Introudction to Cyber Security and Digital Forensics</td>
+            <td>Enrolled</td>
+          </tr>
+          <tr>
+            <td>CS 3010</td>
+            <td>Numerical Method and Computing</td>
+            <td>Enrolled</td>
+          </tr>
+          <tr>
+            <td>CS 3110</td>
+            <td>Formal Languages and Automata</td>
+            <td>Enrolled</td>
+          </tr>
+          <tr>
+            <td>CS 4800</td>
+            <td>Software Engineering</td>
+            <td>Enrolled</td>
+          </tr>
         </tbody>
       </table>
     </div>
