maybe fix resume??

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
     <section id="resume" aria-labelledby="resume-heading">
       <h2 id="resume-heading">Resume</h2>
       <p>
-        <a class="resume-cta" href="assets/Ryan_Vu_Resume.pdf" target="_blank" rel="noopener">My Resume</a>
-        <img src="assets/Ryan_Vu_Resume.jpg"/>
+        <a class="resume-cta" href="assets/Ryan_Vu_Resume.png" target="_blank" rel="noopener">My Resume</a>
+        <img src="assets/Ryan_Vu_Resume.png"/>
       </p>
     </section>
   </main>
