--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <h2 id="resume-heading">Resume</h2>
       <p>
         <a class="resume-cta" href="assets/Ryan_Vu_Resume.png" target="_blank" rel="noopener">My Resume</a>
-        <img src="assets/Ryan_Vu_Resume.png"/>
+        <img src="assets/Ryan_Vu_Resume.png" alt="Resume" style="max-width: 100%; height: auto;"/>
       </p>
     </section>
   </main>
