--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </tr>
           <tr>
             <td>CS 2610</td>
-            <td>Introudction to Cyber Security and Digital Forensics</td>
+            <td>Introduction to Cyber Security and Digital Forensics</td>
             <td>Enrolled</td>
           </tr>
           <tr>
